[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Button_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Stats.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Text_font.tres" type="DynamicFont" id=3]

[node name="Panel" type="Control"]
anchor_right = 1.0
margin_bottom = 171.0
rect_min_size = Vector2( 528, 171 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Afficher les statistiques"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_top = 43.0
margin_bottom = 171.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatValue" type="Label" parent="Panel"]
anchor_left = 0.264
anchor_right = 0.403
margin_left = 31.936
margin_top = 67.0
margin_right = 15.872
margin_bottom = 91.0
custom_fonts/font = ExtResource( 3 )
text = "0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PAValue" type="Label" parent="Panel"]
anchor_left = 0.403
anchor_right = 0.472
margin_left = 15.872
margin_top = 101.0
margin_right = 40.128
margin_bottom = 125.0
custom_fonts/font = ExtResource( 3 )
text = "0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FigNb" type="Label" parent="Panel"]
anchor_left = 0.389
anchor_right = 0.542
margin_left = 23.936
margin_top = 24.0
margin_right = -0.192017
margin_bottom = 53.0
custom_fonts/font = ExtResource( 3 )
text = "0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenseValue" type="Label" parent="Panel"]
anchor_left = 0.139
anchor_right = 0.271
margin_left = 23.936
margin_top = 85.0
margin_right = 11.904
margin_bottom = 109.0
custom_fonts/font = ExtResource( 3 )
text = "0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EspritValue" type="Label" parent="Panel"]
anchor_left = 0.153
anchor_right = 0.243
margin_left = 15.872
margin_top = 32.0
margin_right = 28.032
margin_bottom = 56.0
custom_fonts/font = ExtResource( 3 )
text = "0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefValue" type="Label" parent="Panel"]
anchor_left = 0.014
anchor_right = 0.132
margin_left = 23.936
margin_top = 67.0
margin_right = 19.968
margin_bottom = 91.0
custom_fonts/font = ExtResource( 3 )
text = "0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DmgValues" type="Label" parent="Panel"]
anchor_left = 0.557
anchor_top = -0.009
anchor_right = 1.0
margin_left = 0.167938
margin_top = 22.152
margin_right = 1.99994
margin_bottom = 45.0
rect_rotation = -0.205741
custom_fonts/font = ExtResource( 3 )
text = "Max : 9 Moy : 9 Min : 9"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TirValues" type="Label" parent="Panel"]
anchor_left = 0.556
anchor_top = -0.023
anchor_right = 1.0
margin_left = 0.743958
margin_top = 74.944
margin_right = -7.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 3 )
text = "Max : 9 Moy : 9 Min : 9"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MvtValues" type="Label" parent="Panel"]
anchor_left = 0.514
anchor_right = 0.733
margin_left = 39.936
margin_top = 104.0
margin_right = -0.208008
margin_bottom = 128.0
custom_fonts/font = ExtResource( 3 )
text = "99/99/99"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combat" type="Label" parent="Panel"]
anchor_left = 0.264
anchor_right = 0.403
margin_left = -0.0639954
margin_top = 48.0
margin_right = -0.128021
margin_bottom = 72.0
custom_fonts/font = ExtResource( 3 )
text = "Combat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Figs" type="Label" parent="Panel"]
anchor_left = 0.389
anchor_right = 0.542
margin_left = -0.0640106
margin_right = -0.192017
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "Figurines"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dmg" type="Label" parent="Panel"]
anchor_left = 0.557
anchor_right = 1.0
margin_left = 0.167969
margin_right = -142.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "Dégats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tir" type="Label" parent="Panel"]
anchor_left = 0.557
anchor_right = 1.0
margin_left = -0.832031
margin_top = 53.0
margin_right = -186.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 3 )
text = "Tir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Défense" type="Label" parent="Panel"]
anchor_left = 0.139
anchor_right = 0.271
margin_left = -0.0640106
margin_top = 104.0
margin_right = -0.0960083
margin_bottom = 128.0
custom_fonts/font = ExtResource( 3 )
text = "Défense"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esprit" type="Label" parent="Panel"]
anchor_left = 0.153
anchor_right = 0.243
margin_left = -0.128006
margin_top = 5.0
margin_right = 0.0319977
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Esprit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ref" type="Label" parent="Panel"]
anchor_left = 0.014
anchor_right = 0.132
margin_left = -0.0640001
margin_top = 48.0
margin_right = -4.032
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
text = "Réflexe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PAs" type="Label" parent="Panel"]
anchor_left = 0.403
anchor_right = 0.472
margin_left = -0.128021
margin_top = 72.0
margin_right = 0.127991
margin_bottom = 96.0
custom_fonts/font = ExtResource( 3 )
text = "PAs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mvt" type="Label" parent="Panel"]
anchor_left = 0.514
anchor_right = 0.733
margin_left = -0.0639954
margin_top = 104.0
margin_right = -92.208
margin_bottom = 128.0
custom_fonts/font = ExtResource( 3 )
text = "Mvt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PVs" type="Label" parent="Panel"]
anchor_left = 0.753
anchor_right = 0.977
margin_left = 0.271973
margin_top = 104.0
margin_right = -92.752
margin_bottom = 128.0
custom_fonts/font = ExtResource( 3 )
text = "PVs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PVsValues" type="Label" parent="Panel"]
anchor_left = 0.753
anchor_right = 0.977
margin_left = 38.272
margin_top = 104.0
margin_right = 0.247986
margin_bottom = 128.0
custom_fonts/font = ExtResource( 3 )
text = "99/99/99"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
